--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://db4free.net:3306/receitasnutri
+spring.datasource.username=larianeclopes
+spring.datasource.password=larilari
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
 
+api.security.token.secret=${JWT_SECRET:meu_segredo}
